Bug 251917 - Contradictory notifications after sending, when no transport configured, email afterwards lost
Summary: Contradictory notifications after sending, when no transport configured, emai...
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: VHI critical
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-21 12:46 UTC by Felix Wolfsteller
Modified: 2010-10-04 10:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-09-21 12:46:10 UTC
Similar to https://bugs.kde.org/show_bug.cgi?id=248775 , when attempting to send a message without a configured transport.

To reproduce:

0) start kmail-mobile
1) open composer ("Write new mail")
2) open action flap->configure transport
3) press "delete" for every transport
4) add recipient, enter subject and text for the mail
5) press send.

This results in two notifications:

"Error while trying to send email. There were problems" and "E-mail successfully sent".

These notifications should not appear together.

The email is afterwards lost (not found in outbox or sent-mail).
Comment 1 Felix Wolfsteller 2010-09-21 12:46:59 UTC
Encountered with version 4:4.5~20100920.1177660-1maemo1.1177547 .
Comment 2 Björn Balazs 2010-09-22 11:01:21 UTC
Is this a dublicate of https://bugs.kde.org/show_bug.cgi?id=249993 ?
Comment 3 Felix Wolfsteller 2010-09-22 11:22:49 UTC
(In reply to comment #2)
> Is this a dublicate of https://bugs.kde.org/show_bug.cgi?id=249993 ?

Great that you keep eyes on this.

Imho, its not fully the (the other issue is more sent-mail and malformed adress - centric).
Probably the intermediate cause for the conflicting notifications is.

I hope the devs can straighten this out and mark as duplicate if it is.
Comment 4 Volker Krause 2010-09-29 15:04:02 UTC
SVN commit 1180939 by vkrause:

Don't emit sentSuccessfully() after failed(), that causes the current
draft to be lost.

BUG: 251917
BUG: 249993


 M  +3 -1      messagecomposer/composerviewbase.cpp  
 M  +1 -0      mobile/mail/composerview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1180939
Comment 5 Felix Wolfsteller 2010-10-04 10:10:41 UTC
In 4:4.5~20101001.1181430-1maemo1.1181463 , not reproducible. Instead, just the error message is shown. The composer view is kept open, though.