Don't emit sentSuccessfully() after failed(), that causes the current draft to be lost.

BUG: 251917
BUG: 249993

svn path=/trunk/KDE/kdepim/messagecomposer/; revision=1180939